--- a/ref/my-cluster-zk-cc.yaml
+++ b/ref/my-cluster-zk-cc.yaml
@@ -1,25 +1,59 @@
-# Streams For Apache Kafka - Cruise Control
+apiVersion: kafka.strimzi.io/v1beta2
+kind: Kafka
+metadata:
+  name: my-cluster
+  namespace: kafka-test
+  annotations:
+    strimzi.io/node-pools: enabled
+    #strimzi.io/kraft: enabled
+spec:
+  kafka:
+    version: 3.9.0
 
-Tutorials around Streams For Apache Kafka running on OCP - Cruise Control
-
-## Overview of tutorial
-
-Cruise control is a powerful operator that can be deployed and configured with streams for apache kafka (strimzi).
-
-## Table of Contents
-
-Tutorial listing
-
-1. [Prereqs](#prerequisites)
-2. [Tutorial Breakouts](#tutorials)
-3. [Reference Docs](#reference-docs)
-
----
-
-First lets explore the yaml to see some configuration of Cruise Control
-
-```bash
-cruiseControl:
+    authorization:
+      type: simple
+    # The replicas field is required by the Kafka CRD schema while the KafkaNodePools feature gate is in alpha phase.
+    # But it will be ignored when Kafka Node Pools are used
+    replicas: 3
+    listeners:
+      - name: plain
+        port: 9092
+        type: internal
+        tls: false
+      - name: external
+        port: 9094
+        type: route
+        tls: true
+        authentication:
+          type: tls
+    config:
+      offsets.topic.replication.factor: 3
+      transaction.state.log.replication.factor: 3
+      transaction.state.log.min.isr: 2
+      default.replication.factor: 3
+      min.insync.replicas: 2
+      inter.broker.protocol.version: "3.9"
+    # The storage field is required by the Kafka CRD schema while the KafkaNodePools feature gate is in alpha phase.
+    # But it will be ignored when Kafka Node Pools are used
+    storage:
+      type: jbod
+      volumes:
+      - id: 0
+        type: persistent-claim
+        size: 10Gi
+        deleteClaim: false
+  # The ZooKeeper section is required by the Kafka CRD schema while the UseKRaft feature gate is in alpha phase.
+  # But it will be ignored when running in KRaft mode
+  zookeeper:
+    replicas: 3
+    storage:
+      type: persistent-claim
+      size: 10Gi
+      deleteClaim: false
+  entityOperator:
+    topicOperator: {}
+    userOperator: {}
+  cruiseControl:
     config:
       goals: >
         com.linkedin.kafka.cruisecontrol.analyzer.goals.RackAwareGoal,
@@ -48,4 +82,3 @@ cruiseControl:
         com.linkedin.kafka.cruisecontrol.analyzer.goals.RackAwareGoal,
         com.linkedin.kafka.cruisecontrol.analyzer.goals.ReplicaCapacityGoal,
         com.linkedin.kafka.cruisecontrol.analyzer.goals.DiskCapacityGoal
-```
