--- a/ref/tutorial-cluster-east-v4.yaml
+++ b/ref/tutorial-cluster-east-v4.yaml
@@ -21,6 +21,8 @@ spec:
         tls: true
         authentication:
           type: tls
+    authorization:
+        type: simple
     config:
       offsets.topic.replication.factor: 3
       transaction.state.log.replication.factor: 3
